<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_create"
        android:icon="@drawable/ic_add_white"
        android:title="@string/create_product"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actions"
        android:title="@string/actions"
        android:icon="@drawable/ic_more"
        app:showAsAction="ifRoom" >

        <menu>
            <item
                android:id="@+id/action_view_list_of_producsts"
                android:title="@string/view_list_of_products"
                android:icon="@drawable/ic_list_gray"
                android:orderInCategory="100"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_create_uom"
                android:title="@string/add_uom_category"
                android:icon="@drawable/ic_add_gray"
                android:orderInCategory="100"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_delete_uom"
                android:title="@string/delete_uom_category"
                android:icon="@drawable/ic_delete_gray"
                android:orderInCategory="100"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>
