<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".BottomSheet">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/swipe_up"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/edit"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_code_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_code_update"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/product_code"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/product_name_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_name_update"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/product_name"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_update_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="260dp"
                android:text="@string/update"
                android:textColor="@color/white"
                android:background="@drawable/btn_custom2" />

        </LinearLayout>

    </LinearLayout>
</layout>