<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UOMFragment">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/swipe_up"
            tools:ignore="RedundantDescriptionCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/add_uom"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:id="@+id/edit_product_code_uom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_product_code_uom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/product_code"
                    android:inputType="none"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/units_of_measure_uom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/et_units_of_measure_uom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/units_of_measure"
                    android:focusable="false"
                    android:inputType="none"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxStrokeColor="@android:color/darker_gray"
                app:hintTextColor="@android:color/darker_gray"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add_uom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="220dp"
                android:layout_marginTop="20dp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:background="@drawable/btn_custom2" />

        </LinearLayout>
    </LinearLayout>
</layout>