<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="ProductsItem"
            type="com.magdaraog.engagia.ojtapp.Products" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="75dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:hint="@string/product_name"
                        android:text="@{ProductsItem.prodName}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_code"
                        android:text="@{ProductsItem.prodCode}"
                        android:textAllCaps="true"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/ic_chevron_right"
                    android:contentDescription="@string/chevron_right"
                    tools:ignore="ImageContrastCheck" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/card_view"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/divider"
            tools:ignore="ImageContrastCheck" />

    </RelativeLayout>
</layout>