<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#2D3142" />

        <LinearLayout
            android:id="@+id/npts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/ic_no_data_to_show"
                android:alpha=".30"
                android:contentDescription="@string/npts_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/npts_title"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/npts_body"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:gravity="center" />

        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_below="@id/toolbar"
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

    </RelativeLayout>
</layout>